zabbix/glusterfs-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: glusterfs-cluster
  namespace: zabbix
subsets:
- addresses:
  - ip: 192.168.1.244
  ports:
  - port: 1
- addresses:
  - ip: 192.168.1.245
  ports:
  - port: 1
