zabbix/glusterfs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glusterfs-cluster
  namespace: zabbix
spec:
  ports:
  - port: 1
