zabbix/kube-zabbix-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-server
  namespace: zabbix
spec:
  ports:
    - port: 10051
  selector:
    app: zabbix-server
  clusterIP: None

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-server
  namespace: zabbix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zabbix-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: zabbix-server
    spec:
      containers:
      - image: zabbix/zabbix-server-mysql:alpine-5.2-latest
        name: zabbix-server
        ports:
        - containerPort: 10051
          name: zabbix-server
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
      volumes:
      - name: localtime
        hostPath:
          path: /etc/localtime
      tolerations:
      - key: "node.kubernetes.io/unreachable"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 10
      - key: "node.kubernetes.io/not-ready"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 10
