zabbix/kube-zabbix-web-apache.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-web-apache
  namespace: zabbix
spec:
  type: NodePort
  selector:
    app: zabbix-web-apache
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30080
    - name: https
      port: 443
      targetPort: 8443
      nodePort: 30443

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-web-apache
  namespace: zabbix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zabbix-web-apache
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: zabbix-web-apache
    spec:
      containers:
      - image: zabbix/zabbix-web-apache-mysql:alpine-5.2-latest
        name: zabbix-web-apache
        ports:
        - containerPort: 8080
          name: zabbix-http
        - containerPort: 8443
          name: zabbix-https
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
      volumes:
      - name: localtime
        hostPath:
          path: /etc/localtime
      tolerations:
      - key: "node.kubernetes.io/unreachable"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 60
      - key: "node.kubernetes.io/not-ready"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 60
