zabbix/kube-zabbix-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: zabbix
spec:
  rules:
    - http: 192.168.1.250
      http:
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: zabbix-web-apache
              port:
                number: 80
